2009-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/installation/modules.tcl: Fix issue with examples for logger,
	* support/installation/actions.tcl: which did not fit the
	  expectations of action _exa, which assumed the module name,
	  which is 'log'. Instead of wrestling CVS into renaming the
	  directory a new action is made which takes the actual name as
	  argument.

	* support/devel/sak/note/cmd.tcl: New sak commands 'note' and 'readme'
	* support/devel/sak/note/help.txt: for semi-automatic generation of
	* support/devel/sak/note/note.tcl: the release README.txt from
	* support/devel/sak/note/pkgIndex.tcl: current and last package
	* support/devel/sak/note/topic.txt: versions, and note'd hints.
	* support/devel/sak/readme/cmd.tcl:
	* support/devel/sak/readme/help.txt:
	* support/devel/sak/readme/pkgIndex.tcl:
	* support/devel/sak/readme/readme.tcl:
	* support/devel/sak/readme/topic.txt:

2009-11-11  Andreas Kupries  <andreask@activestate.com>

	* apps/dtplite: Updated the requirements to force use of doctools
	  v1, this app is not doctools v2 ready yet.

2009-11-10  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/validate/cmd.tcl: Extended argument processing
	* support/devel/sak/validate/manpages.tcl: of the validation command
	* support/devel/sak/validate/syntax.tcl: to enable a user to specify
	* support/devel/sak/validate/testsuites.tcl: which version of Tcl
	* support/devel/sak/validate/validate.tcl: to check against. Plus
	* support/devel/sak/validate/versions.tcl: fix to handle modules
	  without manpages.

	* modules/coroutine: New module 'coroutine' providing to coroutine
	  utility packages for easier use of channel operations. These
	  packages are for Tcl 8.6+.

	* support/installation/modules.tcl: New module 'coroutine'.

2009-09-28  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/test/run.tcl (::sak::test::run::CaptureStack):