@@ -1,0 +1,42 @@
+# -*- tcl -*- json_write.pcx
+# Syntax of the commands provided by package json::write.
+#
+# For use by TclDevKit's static syntax checker (v4.1+).
+# See http://www.activestate.com/solutions/tcl/
+# See http://aspn.activestate.com/ASPN/docs/Tcl_Dev_Kit/4.0/Checker.html#pcx_api
+# for the specification of the format of the code in this file.
+#
+
+package require pcx
+pcx::register json::write
+pcx::tcldep   1.0 needs tcl 8.5
+
+namespace eval ::json::write {}
+
+#pcx::message FOO {... text ...} type
+#pcx::scan <VERSION> <NAME> <RULE>
+
+pcx::check 1.0 std ::json::write {checkSimpleArgs 1 -1 {
+    {checkOption {
+	{indented {checkSimpleArgs 0 1 {
+	    checkBoolean
+	}}}
+	{aligned {checkSimpleArgs 0 1 {
+	    checkBoolean
+	}}}
+	{string {checkSimpleArgs 1 1 {
+	    checkWord
+	}}}
+	{array {checkSimpleArgs 0 -1 {
+	    checkWord
+	}}}
+	{object {checkSimpleArgsModNk 0 2 {
+	    checkWord
+	    checkWord
+	}}}}
+    } {}}
+}}
+
+# Initialization via pcx::init.
+# Use a ::json::write::init procedure for non-standard initialization.
+pcx::complete
